9. cfn-init - helper scripts.yaml
Parameters:
  ResourceName:
    Description: 'The name of the service this stack is to be used for.'
    Type: String
  KeyName:
    Description:
      Name of an existing EC2 KeyPair to enable SSH access into the server
    Type: AWS::EC2::KeyPair::KeyName
Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-090fa75af13c156b4
    ap-southeast-1:
      AMI: ami-0ff89c4ce7de192ea
Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              httpd: []
              php: []
          files:
            /var/www/html/index.php:
              content: !Sub |
                <?php print "Hello AWS. You are AWSome!"; ?>
          services:
            sysvinit:
              httpd:
                enabled: true
                ensureRunning: true
    Properties:
      InstanceType: t2.micro
      ImageId:
        Fn::FindInMap:
          - RegionMap
          - !Ref AWS::Region
          - AMI
      SecurityGroupIds:
        - !Ref MySecurityGroup
      Tags:
        - Key: Name
          Value: !Ref ResourceName
      KeyName: !Ref KeyName
      UserData:
        'Fn::Base64': !Sub |
          #!/bin/bash -xe            
          # Ensure AWS CFN Bootstrap is the latest
          yum install -y aws-cfn-bootstrap
          # Install the files and packages from the metadata
          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource EC2Instance  --region ${AWS::Region}
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open Ports 22 and 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
Outputs:
  Website:
    Description: The Public DNS for the EC2 Instance
    Value: !Sub 'http://${EC2Instance.PublicDnsName}'

#Ref: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-helper-scripts-reference.html 

# *cfn-init dùng để truy xuất , cài đặt gói, tạo tệp và bắt đầu dịch vụ.

# Ví dụ trong template của trên, AWS::CloudFormation::Init được sử dụng để cấu hình một EC2 instance. Cụ thể, nó được sử dụng để:
#     Cài đặt các gói httpd và php bằng trình quản lý gói yum.
#     Tạo một file /var/www/html/index.php chứa mã PHP đơn giản sử dụng hàm print để in ra dòng chữ "Hello AWS. You are AWSome!".
#     Cấu hình dịch vụ httpd để được chạy tự động khi EC2 instance được bật lên.
